test/parsing/errors/invalidNumericLiteral.chpl
var x : int = 100000000000000000000000000000;
